Not sure what this is

--- a/latex/bib/stablecoinRef.bib
+++ b/latex/bib/stablecoinRef.bib
@@ -1,38 +1,37 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeremy Clark at 2019-06-07 09:38:34 -0400 
+%% Created for Jeremy Clark at 2019-09-26 21:38:17 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
 @book{narayanan2016bitcoin,
-  title={Bitcoin and cryptocurrency technologies: a comprehensive introduction},
-  author={Narayanan, Arvind and Bonneau, Joseph and Felten, Edward and Miller, Andrew and Goldfeder, Steven},
-  year={2016},
-  publisher={Princeton University Press}
-}
+	Author = {Narayanan, Arvind and Bonneau, Joseph and Felten, Edward and Miller, Andrew and Goldfeder, Steven},
+	Publisher = {Princeton University Press},
+	Title = {Bitcoin and cryptocurrency technologies: a comprehensive introduction},
+	Year = {2016}}
 
-@misc{BibEntry2019Aug,
-	title = {{A brief history of Stablecoins (Part 1) {\textendash} BitMEX Blog}},
-	year = {2019},
-	month = {Aug},
-	note = {[Online; accessed 21. Aug. 2019]},
-	url = {https://blog.bitmex.com/a-brief-history-of-stablecoins-part-1}
-}
+@misc{bitmex,
+	Month = {Aug},
+	Note = {[Online; accessed 21. Aug. 2019]},
+	Title = {{A brief history of Stablecoins (Part 1) {\textendash} BitMEX Blog}},
+	Url = {https://blog.bitmex.com/a-brief-history-of-stablecoins-part-1},
+	Year = {2019},
+	Bdsk-Url-1 = {https://blog.bitmex.com/a-brief-history-of-stablecoins-part-1}}
 
-	
 @article{Orcutt2018Jun,
-	author = {Orcutt, Mike},
-	title = {{{\textquotedblleft}Stablecoins{\textquotedblright} are trending, but they may ignore basic economics}},
-	journal = {MIT Technology Review},
-	year = {2018},
-	month = {Jun},
-	publisher = {MIT Technology Review},
-	url = {https://www.technologyreview.com/s/611370/stablecoins-are-trending-but-they-may-ignore-basic-economics}
-}
-%The following reference gives ssl security warning! Couldnt edit it. Better to change it
+	Author = {Orcutt, Mike},
+	Journal = {MIT Technology Review},
+	Month = {Jun},
+	Publisher = {MIT Technology Review},
+	Title = {{{\textquotedblleft}Stablecoins{\textquotedblright} are trending, but they may ignore basic economics}},
+	Url = {https://www.technologyreview.com/s/611370/stablecoins-are-trending-but-they-may-ignore-basic-economics},
+	Year = {2018},
+	Bdsk-Url-1 = {https://www.technologyreview.com/s/611370/stablecoins-are-trending-but-they-may-ignore-basic-economics}}
+
 @misc{cryptoinsider,
 	Author = {Conor O'Higgins},
 	Howpublished = {\url{https://cryptoinsider.21mil.com/stablecoins-everything-need-know/}},
@@ -40,29 +39,26 @@
 	Title = {Stablecoins - everything you need to know},
 	Year = {2018}}
 
-	
 @article{Huillet2018Jul,
-	author = {Huillet, Marie},
-	title = {{IBM Backs New US Dollar-Pegged Stablecoin That Runs on Stellar Network}},
-	journal = {Cointelegraph},
-	year = {2018},
-	month = {Jul},
-	publisher = {Cointelegraph},
-	url = {https://cointelegraph.com/news/ibm-backs-new-us-dollar-pegged-stablecoin-that-runs-on-stellar-network}
-}
+	Author = {Huillet, Marie},
+	Journal = {Cointelegraph},
+	Month = {Jul},
+	Publisher = {Cointelegraph},
+	Title = {{IBM Backs New US Dollar-Pegged Stablecoin That Runs on Stellar Network}},
+	Url = {https://cointelegraph.com/news/ibm-backs-new-us-dollar-pegged-stablecoin-that-runs-on-stellar-network},
+	Year = {2018},
+	Bdsk-Url-1 = {https://cointelegraph.com/news/ibm-backs-new-us-dollar-pegged-stablecoin-that-runs-on-stellar-network}}
 
-	
 @article{Lee2018Mar,
-	author = {Lee, Sherman},
-	title = {{Explaining Stable Coins, The Holy Grail Of Cryptocurrency}},
-	journal = {Forbes},
-	year = {2018},
-	month = {Mar},
-	publisher = {Forbes},
-	url = {https://www.forbes.com/sites/shermanlee/2018/03/12/explaining-stable-coins-the-holy-grail-of-crytpocurrency/#445da3114fc6}
-}
+	Author = {Lee, Sherman},
+	Journal = {Forbes},
+	Month = {Mar},
+	Publisher = {Forbes},
+	Title = {{Explaining Stable Coins, The Holy Grail Of Cryptocurrency}},
+	Url = {https://www.forbes.com/sites/shermanlee/2018/03/12/explaining-stable-coins-the-holy-grail-of-crytpocurrency/#445da3114fc6},
+	Year = {2018},
+	Bdsk-Url-1 = {https://www.forbes.com/sites/shermanlee/2018/03/12/explaining-stable-coins-the-holy-grail-of-crytpocurrency/#445da3114fc6}}
 
-%The following medium post has been deleted, better to delete the bib entry as we don't even cite this in the paper
 @misc{medium,
 	Author = {Liquidity Network},
 	Howpublished = {\url{ https://medium.com/@liquidity.network/stablecoin-payments-with-liquidity-network-d7e7aa8e1533}},
@@ -70,91 +66,84 @@
 	Title = {Stablecoin Payments with Liquidity.Network},
 	Year = {2018}}
 
-	
 @article{McElrath2018Sep,
-	author = {McElrath, Bob},
-	title = {{On The (in)Stability of Stablecoins}},
-	journal = {Medium},
-	year = {2018},
-	month = {Sep},
-	publisher = {Medium},
-	url = {https://medium.com/@bob.mcelrath/on-the-in-stability-of-stablecoins-517b7d17c3ee}
-}
+	Author = {McElrath, Bob},
+	Journal = {Medium},
+	Month = {Sep},
+	Publisher = {Medium},
+	Title = {{On The (in)Stability of Stablecoins}},
+	Url = {https://medium.com/@bob.mcelrath/on-the-in-stability-of-stablecoins-517b7d17c3ee},
+	Year = {2018},
+	Bdsk-Url-1 = {https://medium.com/@bob.mcelrath/on-the-in-stability-of-stablecoins-517b7d17c3ee}}
 
-@misc{BibEntry2019Aug,
-	title = {{Stablecoins: designing a price-stable cryptocurrency}},
-	year = {2019},
-	month = {Aug},
-	note = {[Online; accessed 21. Aug. 2019]},
-	url = {https://hackernoon.com/stablecoins-designing-a-price-stable-cryptocurrency-6bf24e2689e5}
-}
+@misc{hakernoon,
+	Date-Modified = {2019-09-26 21:37:20 -0400},
+	Month = {Aug},
+	Note = {[Online; accessed 21. Aug. 2019]},
+	Title = {{Stablecoins: designing a price-stable cryptocurrency}},
+	Url = {https://hackernoon.com/stablecoins-designing-a-price-stable-cryptocurrency-6bf24e2689e5},
+	Year = {2019},
+	Bdsk-Url-1 = {https://hackernoon.com/stablecoins-designing-a-price-stable-cryptocurrency-6bf24e2689e5}}
 
 @article{gemini,
 	Author = {Gemini Trust Company, LLC},
 	Title = {The Gemini Dollar: A Regulated Stable Value Coin},
 	Year = {2018}}
 
-	
 @article{De2018Sep,
-	author = {De, Nikhilesh},
-	title = {{Gemini Launches NYDFS-Regulated Crypto Pegged to the Dollar}},
-	journal = {CoinDesk},
-	year = {2018},
-	month = {Sep},
-	publisher = {CoinDesk},
-	url = {https://www.coindesk.com/gemini-launches-nydfs-regulated-crypto-pegged-to-the-dollar}
-}
-
-	
-@article{De2018Sep,
-	author = {De, Nikhilesh},
-	title = {{Paxos Unveils Dollar-Backed Stablecoin Approved by New York Regulator}},
-	journal = {CoinDesk},
-	year = {2018},
-	month = {Sep},
-	publisher = {CoinDesk},
-	url = {https://www.coindesk.com/paxos-unveils-dollar-backed-stablecoin-approved-by-new-york-regulator}
-}
+	Author = {De, Nikhilesh},
+	Journal = {CoinDesk},
+	Month = {Sep},
+	Publisher = {CoinDesk},
+	Title = {{Gemini Launches NYDFS-Regulated Crypto Pegged to the Dollar}},
+	Url = {https://www.coindesk.com/gemini-launches-nydfs-regulated-crypto-pegged-to-the-dollar},
+	Year = {2018},
+	Bdsk-Url-1 = {https://www.coindesk.com/gemini-launches-nydfs-regulated-crypto-pegged-to-the-dollar}}
 
 @inproceedings{okoye2018toward,
-  title={Toward Cryptocurrency Lending},
-  author={Okoye, Mildred Chidinma and Clark, Jeremy},
-  booktitle={International Conference on Financial Cryptography and Data Security},
-  pages={367--380},
-  year={2018},
-  organization={Springer}
-}
+	Author = {Okoye, Mildred Chidinma and Clark, Jeremy},
+	Booktitle = {International Conference on Financial Cryptography and Data Security},
+	Organization = {Springer},
+	Pages = {367--380},
+	Title = {Toward Cryptocurrency Lending},
+	Year = {2018}}
 
+@article{De2018Sep,
+	Author = {De, Nikhilesh},
+	Journal = {CoinDesk},
+	Month = {Sep},
+	Publisher = {CoinDesk},
+	Title = {{Paxos Unveils Dollar-Backed Stablecoin Approved by New York Regulator}},
+	Url = {https://www.coindesk.com/paxos-unveils-dollar-backed-stablecoin-approved-by-new-york-regulator},
+	Year = {2018},
+	Bdsk-Url-1 = {https://www.coindesk.com/paxos-unveils-dollar-backed-stablecoin-approved-by-new-york-regulator}}
 
 @article{sams2015note,
-  title={A Note on Cryptocurrency Stabilisation: Seigniorage Shares},
-  author={Sams, Robert},
-  journal={BraveNewCoin. com. Retrieved on April},
-  volume={28},
-  pages={2015},
-  year={2015}
-}
-
+	Author = {Sams, Robert},
+	Journal = {BraveNewCoin. com. Retrieved on April},
+	Pages = {2015},
+	Title = {A Note on Cryptocurrency Stabilisation: Seigniorage Shares},
+	Volume = {28},
+	Year = {2015}}
 
 @article{Team2018Oct,
-	author = {Team, Cp Processor},
-	title = {{Comprehensive overview of STABLECOINS}},
-	journal = {Medium},
-	year = {2018},
-	month = {Oct},
-	issn = {8191-8367},
-	publisher = {CP{$\_$}PROCESSOR},
-	url = {https://medium.com/cp-processor/comprehensive-overview-of-stablecoins-819d183f6ac7}
-}
-
+	Author = {Team, Cp Processor},
+	Issn = {8191-8367},
+	Journal = {Medium},
+	Month = {Oct},
+	Publisher = {CP{$\_$}PROCESSOR},
+	Title = {{Comprehensive overview of STABLECOINS}},
+	Url = {https://medium.com/cp-processor/comprehensive-overview-of-stablecoins-819d183f6ac7},
+	Year = {2018},
+	Bdsk-Url-1 = {https://medium.com/cp-processor/comprehensive-overview-of-stablecoins-819d183f6ac7}}
 
 @misc{BibEntry2019Aug,
-	title = {{Overview of Stablecoins}},
-	year = {2019},
-	month = {Aug},
-	note = {[Online; accessed 21. Aug. 2019]},
-	url = {https://hackernoon.com/overview-of-stablecoins-2e4ffef82a73}
-}
+	Month = {Aug},
+	Note = {[Online; accessed 21. Aug. 2019]},
+	Title = {{Overview of Stablecoins}},
+	Url = {https://hackernoon.com/overview-of-stablecoins-2e4ffef82a73},
+	Year = {2019},
+	Bdsk-Url-1 = {https://hackernoon.com/overview-of-stablecoins-2e4ffef82a73}}
 
 @incollection{smithin2002money,
 	Author = {Smithin, John},
@@ -164,75 +153,69 @@
 	Title = {What is money? Introduction},
 	Year = {2002}}
 
+@misc{BibEntry2019Aug1,
+	Month = {Aug},
+	Note = {[Online; accessed 21. Aug. 2019]},
+	Title = {{Stablecoins vs. Govtcoins: The Race to Solve Cryptocurrencies{'} Price Volatility Problems}},
+	Url = {https://www.linkedin.com/pulse/stablecoins-vs-govtcoins-race-solve-cryptocurrencies-price-dhillon},
+	Year = {2019},
+	Bdsk-Url-1 = {https://www.linkedin.com/pulse/stablecoins-vs-govtcoins-race-solve-cryptocurrencies-price-dhillon}}
 
-@misc{BibEntry2019Aug,
-	title = {{Stablecoins vs. Govtcoins: The Race to Solve Cryptocurrencies{'} Price Volatility Problems}},
-	year = {2019},
-	month = {Aug},
-	note = {[Online; accessed 21. Aug. 2019]},
-	url = {https://www.linkedin.com/pulse/stablecoins-vs-govtcoins-race-solve-cryptocurrencies-price-dhillon}
-}
-	
 @article{barrdear2016macroeconomics,
-  title={The macroeconomics of central bank issued digital currencies},
-  author={Barrdear, John and Kumhof, Michael},
-  year={2016},
-  publisher={Bank of England working paper}
-}	
-	
+	Author = {Barrdear, John and Kumhof, Michael},
+	Publisher = {Bank of England working paper},
+	Title = {The macroeconomics of central bank issued digital currencies},
+	Year = {2016}}
+
 @misc{blockchain2018state,
-  title={The State of Stablecoins},
-  author={Blockchain Luxembourg, SA},
-  year={2018}
-}
+	Author = {Blockchain Luxembourg, SA},
+	Title = {The State of Stablecoins},
+	Year = {2018}}
 
 @article{Team2019Feb,
-	author = {Team, Blockchain},
-	title = {{Introducing: 2019 State of Stablecoins Report}},
-	journal = {Blockchain Blog},
-	year = {2019},
-	month = {Feb},
-	publisher = {Blockchain Blog},
-	url = {https://blog.blockchain.com/2019/02/20/introducing-2019-stablecoins}
-}
-
+	Author = {Team, Blockchain},
+	Journal = {Blockchain Blog},
+	Month = {Feb},
+	Publisher = {Blockchain Blog},
+	Title = {{Introducing: 2019 State of Stablecoins Report}},
+	Url = {https://blog.blockchain.com/2019/02/20/introducing-2019-stablecoins},
+	Year = {2019},
+	Bdsk-Url-1 = {https://blog.blockchain.com/2019/02/20/introducing-2019-stablecoins}}
 
 @misc{BibEntry2019Aug,
-	title = {{Forget bitcoin: stablecoins will change how money works}},
-	journal = {Euromoney},
-	year = {2019},
-	month = {Aug},
-	note = {[Online; accessed 21. Aug. 2019]},
-	url = {https://www.euromoney.com/article/b1bbk5rb8gp227/forget-bitcoin-stablecoins-will-change-how-money-works?copyrightInfo=true}
-}
-
+	Journal = {Euromoney},
+	Month = {Aug},
+	Note = {[Online; accessed 21. Aug. 2019]},
+	Title = {{Forget bitcoin: stablecoins will change how money works}},
+	Url = {https://www.euromoney.com/article/b1bbk5rb8gp227/forget-bitcoin-stablecoins-will-change-how-money-works?copyrightInfo=true},
+	Year = {2019},
+	Bdsk-Url-1 = {https://www.euromoney.com/article/b1bbk5rb8gp227/forget-bitcoin-stablecoins-will-change-how-money-works?copyrightInfo=true}}
 
 @article{Schor2019May,
-	author = {Schor, Lukas},
-	title = {{Stablecoins Explained}},
-	journal = {Medium},
-	year = {2019},
-	month = {May},
-	publisher = {Medium},
-	url = {https://medium.com/@schor/stablecoins-explained-206466da5e61}
-}
+	Author = {Schor, Lukas},
+	Journal = {Medium},
+	Month = {May},
+	Publisher = {Medium},
+	Title = {{Stablecoins Explained}},
+	Url = {https://medium.com/@schor/stablecoins-explained-206466da5e61},
+	Year = {2019},
+	Bdsk-Url-1 = {https://medium.com/@schor/stablecoins-explained-206466da5e61}}
 
 @article{nakamoto2008bitcoin,
-  title={Bitcoin: A peer-to-peer electronic cash system},
-  author={Nakamoto, Satoshi and others},
-  year={2008},
-  publisher={Working Paper}
-}
-
+	Author = {Nakamoto, Satoshi and others},
+	Publisher = {Working Paper},
+	Title = {Bitcoin: A peer-to-peer electronic cash system},
+	Year = {2008}}
 
 @misc{BibEntry2019Aug,
-	title = {{Black Swan Definition}},
-	journal = {Investopedia},
-	year = {2019},
-	month = {Aug},
-	note = {[Online; accessed 21. Aug. 2019]},
-	url = {https://www.investopedia.com/terms/b/blackswan.asp}
-}
+	Journal = {Investopedia},
+	Month = {Aug},
+	Note = {[Online; accessed 21. Aug. 2019]},
+	Title = {{Black Swan Definition}},
+	Url = {https://www.investopedia.com/terms/b/blackswan.asp},
+	Year = {2019},
+	Bdsk-Url-1 = {https://www.investopedia.com/terms/b/blackswan.asp}}
+
 @book{harris2003trading,
 	Author = {Harris, Larry},
 	Pages = {410--419},
@@ -247,35 +230,31 @@
 	Year = {1978}}
 
 @article{ametrano2016hayek,
-  title={Hayek money: The cryptocurrency price stability solution},
-  author={Ametrano, Ferdinando M},
-  journal={Available at SSRN 2425270},
-  year={2016}
-}
-
+	Author = {Ametrano, Ferdinando M},
+	Journal = {Available at SSRN 2425270},
+	Title = {Hayek money: The cryptocurrency price stability solution},
+	Year = {2016}}
 
 @misc{EthereumFoundation2019Aug,
-	author = {{Ethereum Foundation}},
-	title = {{The Search for a Stable Cryptocurrency}},
-	year = {2019},
-	month = {Aug},
-	note = {[Online; accessed 21. Aug. 2019]},
-	url = {https://blog.ethereum.org/2014/11/11/search-stable-cryptocurrency}
-}
-
+	Author = {{Ethereum Foundation}},
+	Month = {Aug},
+	Note = {[Online; accessed 21. Aug. 2019]},
+	Title = {{The Search for a Stable Cryptocurrency}},
+	Url = {https://blog.ethereum.org/2014/11/11/search-stable-cryptocurrency},
+	Year = {2019},
+	Bdsk-Url-1 = {https://blog.ethereum.org/2014/11/11/search-stable-cryptocurrency}}
 
 @article{Sexer2019Aug,
-	author = {Sexer, Nathan},
-	title = {{State of Stablecoins, 2018}},
-	journal = {Medium},
-	year = {2019},
-	month = {Aug},
-	issn = {7999-8863},
-	publisher = {ConsenSys Media},
-	url = {https://media.consensys.net/the-state-of-stablecoins-2018-79ccb9988e63}
-}
+	Author = {Sexer, Nathan},
+	Issn = {7999-8863},
+	Journal = {Medium},
+	Month = {Aug},
+	Publisher = {ConsenSys Media},
+	Title = {{State of Stablecoins, 2018}},
+	Url = {https://media.consensys.net/the-state-of-stablecoins-2018-79ccb9988e63},
+	Year = {2019},
+	Bdsk-Url-1 = {https://media.consensys.net/the-state-of-stablecoins-2018-79ccb9988e63}}
 
-%The following reference was not found! We dont cite it in the paper though
 @misc{ltblackg50:online,
 	Author = {Bryan Routledge, Ariel Zetlin-Jones},
 	Howpublished = {\url{http://www.andrew.cmu.edu/user/azj/research/rzj_slides201808.pdf}},
@@ -328,9 +307,7 @@
 	Year = {2016}}
 
 @article{griffin2018bitcoin,
-  title={Is bitcoin really un-tethered?},
-  author={Griffin, John M and Shams, Amin},
-  journal={Available at SSRN 3195066},
-  year={2018}
-}	
-	
+	Author = {Griffin, John M and Shams, Amin},
+	Journal = {Available at SSRN 3195066},
+	Title = {Is bitcoin really un-tethered?},
+	Year = {2018}}
