--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1,5 +1,5 @@
-%\documentclass[sigconf,anonymous]{acmart}
-\documentclass[sigconf]{acmart}
+\documentclass[sigconf,anonymous]{acmart}
+%\documentclass[sigconf]{acmart}
 
 \input{setup/packages}
 \input{setup/macros}
@@ -7,7 +7,7 @@
 \begin{document}
 
 \title{Demystifying the Stability Mechanisms of Stablecoins}
-\titlenote{Available as preprint on SSRN}
+\subtitle{Note: preprint on SSRN, link removed for anonymity}
 
 \author{Jeremy Clark}
 \authornote{Authors listed alphabetically. D. Demirag and S. Moosavi should be considered equal first authors.}
@@ -30,7 +30,7 @@
 %==========================================%
 
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{bib/stablecoinRef, bib/pulp.bib}
+\bibliography{bib/stablecoinRef, bib/pulp}
 
 %==========================================%
 
