--- a/latex/sections/appendix.tex
+++ b/latex/sections/appendix.tex
@@ -86,6 +86,11 @@ Lending a volatile currency poses a risk for both the cash provider and cash tak
 \end{quote}
 
 %========================%
+
+\subsection{Bitcoin's Exchange Rate}
+
+%Without government oversight, the exchange rate of Bitcoin is dependent on: (a) the supply and demand for exchanging Bitcoin and other things of value, namely fiat currencies such as the USD; (b) it's internal algorithm for releasing new BTC (Bitcoin's currency) on a fixed schedule; and (c) the market for participating in transaction validation which is integral into how new BTC comes into circulation.
+
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
 \section{Discussion Points}
@@ -183,7 +188,3 @@ As users' mental model of gas improves over time, the volatility of gas has the 
 \section{Conclusion}
 
 In this paper, we provide a survey of active stablecoin projects. Unlike previous research studies performed on this topic, we selectively use the concepts from finance while eliminating the jargons. In addition, rather than focusing on the details of how particular `brands' of stablecoins work, we thoroughly describe the fundamental mechanics and concepts to achieve price stability. Respectively, we show the taxonomy we use to classify stablecoins which represents the techniques to build a stablecoin. Additionally, we evaluate different price stability achieving mechanics based on their fundamental design decisions and trust models. The comparative evaluation framework highlights the advantages and disadvantages of each techniques more precisely. Eventually, we explore the potential stable index-cryptocurrencies (namely Ethereum gas) in the context of stablecoins.
-
-
-
-
