--- a/latex/sections/stablecoin.tex
+++ b/latex/sections/stablecoin.tex
@@ -3,23 +3,22 @@
 
 \section{Introduction}\label{sec:Intro}
 
-Many early cryptocurrency proposals dating back to the 1980s present secure digital representations of government-issued money (which cryptocurrency enthusiasts typically call `fiat'). While Bitcoin~\cite{nakamoto2008bitcoin} was not the very first proposal for a digital currency that is issued and operates independently of existing currencies and financial infrastructure~\cite{NBFMG16}, Bitcoin is the first of this type to establish wide-scale deployment. Without government oversight, the exchange rate of Bitcoin is essentially subject to: (a) an algorithm which releases new BTC (Bitcoin's currency) on a fixed schedule, and (b) the market for exchanging Bitcoin for other things of value, namely fiat currencies such as the USD, and potentially (c) the market for participating in transaction validation which is integral into how new BTC comes into circulation.
+Cryptocurrency proposals dating back to the 1980s present secure digital representations of government-issued currency (which cryptocurrency enthusiasts call `fiat')~\cite{NBFMG16}. While Bitcoin~\cite{nakamoto2008bitcoin} was not the very first proposal for a digital currency that is issued and operates independently of existing currencies, governments, and financial infrastructure, Bitcoin is the first of this type to establish wide-scale deployment~\cite{NaCl17}. 
 
 %========================%
-\begin{figure}[t]
+\begin{figure*}[t]
 	\centering
-	\includegraphics[width=0.5\textwidth]{figures/allCurrencies.pdf}
+	\includegraphics[width=0.8\textwidth]{figures/allCurrencies.pdf}
 	\caption{\label{fig:btcandfiat}Comparison among fiat currencies and Bitcoin: The values are retrieved daily between  01 Jan 2016 and 01 Jan 2019. Note that 1000 mBTC = 1 BTC.}
-\end{figure}
+\end{figure*}
 %========================%
 
-From the inception of exchanges for buying and selling BTC for USD in 2010 to the time of writing, the exchange rate of BTC with the USD has been marked by extremely volatile with large fluctuations in its value that are a typical of a government-managed currency. Figure~\ref{fig:btcandfiat} illustrates this volatility by plotting the exchange rate of BTC (with the USD) alongside the same exchange rate for three economic zones---Europe, UK, and Canada---which all appear relatively stable. Note that Figure~\ref{fig:btcandfiat} deliberately includes the UK's referendum on exiting the EU (`Brexit') in June 2016, which was followed by a `sharp decline' and `volatility' in GBP's exchange rate.\footnote{Descriptions from the following \textit{BBC} articles: ``The markets facing trading turmoil'' (27 Jun 2016) and ``How does Brexit affect the pound?'' (15 Jan 2019).}  Relative to BTC however, this `severe swing' looks like a mild pinch of GBP's exchange rate with EUR in Figure~\ref{fig:btcandfiat}.
+The exchange rate of BTC with USD has been marked by extreme volatility. Figure~\ref{fig:btcandfiat} illustrates its large fluctuations in value compared with three other economic zones---Europe, UK, and Canada. In June 2016, the GBP underwent a `sharp decline' and `volatility' after Brexit, however relative to BTC, this `severe swing' looks like a mild pinch.\footnote{Descriptions from \textit{BBC} articles: ``The markets facing trading turmoil'' (27 Jun 2016) and ``How does Brexit affect the pound?'' (15 Jan 2019).}
 
 In response to Bitcoin's extreme volatility, a flood of proposals have been made for alternative designs that would offer a more stable exchange rate (called `stablecoins') between such a proposed stablecoin and a government-issued currency like the USD. Broadly, the proposals can be split into two categories: ones that essentially create a digital representation of a fiat currency that can be transacted like a cryptocurrency, and ones that propose separate currencies with some mechanisms for stability and/or intervention built into the design.
+	
+\paragraph{Contributions.} This paper is a systemization of work on stablecoins but we aim at making a number of subtle research contributions to ensure it is useful to the reader. We are very selective in the concepts from finance we bring into the survey, while attempting to minimize or eliminate jargon. We distill stablecoin proposals down to a set of fundamental primitives and describe how these concepts work, as opposed to enumerating the intricate details of how a particular `brand' of stablecoin works today---details that could change tomorrow. %We do provide, as the reader probably expects, a chart mapping existing stablecoin brands into our categorization. Additionally, we also consider the potential for the stability of index-cryptocurrencies (namely gas which is used in Ethereum), which are very pertinent to a discussion of stablecoins, yet not typically addressed. Last, we offer a novel visualization style for exchange rates we have not seen before used for exchange rates.
 
-\paragraph{Contributions.} This paper is a systemization of work on stablecoins but we aim at making a number of subtle research contributions to ensure it is useful to the reader. First and foremost, we are very selective in the concepts from finance we bring into the survey and explain each from first principles, while attempting to minimize or eliminate jargon. Next, we distill stablecoin proposals down to a set of fundamental primitives and describe how these concepts work, as opposed to enumerating the intricate details of how a particular `brand' of stablecoin works today---details that could change tomorrow. We do provide, as the reader probably expects, a chart mapping existing stablecoin brands into our categorization. Additionally, we also consider the potential for the stability of index-cryptocurrencies (namely gas which is used in Ethereum), which are very pertinent to a discussion of stablecoins, yet not typically addressed. Last, we offer a novel visualization style for exchange rates we have not seen before used for exchange rates.
-
-% Most of the coins are mostly focusing on the supporting infrastructure, maybe we also have to talk about the supporting infrastructure of the stablecoin
 
 %========================%
 
