--- a/latex/setup/table.tex
+++ b/latex/setup/table.tex
@@ -37,7 +37,7 @@
 						&													& StableUSD (USDS) & 685 \\ \cline{3-4}
 						&													& Stronghold USD 	& 891 \\ \cline{3-4}
 						&													& Petro 			& 1210 \\ \cline{3-4}
-						&	& \multicolumn{1}{p{5cm}|}{Ekon, WBTC, emparta} & $\perp$ \\ \cline{2-4}
+						&	& \multicolumn{1}{p{5cm}|}{Libra Coin, Ekon, WBTC, emparta} & $\perp$ \\ \cline{2-4}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 						& \multirow{6}{*}{Directly-Backed}  							& Tether 			& 6 \\ \cline{3-4}
 						&													& EURSToken 		& 95 \\ \cline{3-4}
