--- a/latex/bib/pulp.bib
+++ b/latex/bib/pulp.bib
@@ -1,13 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% https://bibdesk.sourceforge.io/
 
-
-%% Created for Jeremy Clark at 2018-10-24 12:42:20 -0400 
+%% Created for Jeremy Clark at 2019-09-26 21:00:58 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{NaCl17,
+	Acmid = {3132259},
+	Address = {New York, NY, USA},
+	Author = {Narayanan, Arvind and Clark, Jeremy},
+	Date-Added = {2019-09-26 21:00:27 -0400},
+	Date-Modified = {2019-09-26 21:00:57 -0400},
+	Doi = {10.1145/3132259},
+	Issn = {0001-0782},
+	Issue_Date = {December 2017},
+	Journal = {Commun. ACM},
+	Month = nov,
+	Number = {12},
+	Numpages = {10},
+	Pages = {36--45},
+	Publisher = {ACM},
+	Title = {Bitcoin's Academic Pedigree},
+	Url = {http://doi.acm.org/10.1145/3132259},
+	Volume = {60},
+	Year = {2017},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/3132259},
+	Bdsk-Url-2 = {https://doi.org/10.1145/3132259}}
 
 @article{AW03,
 	Author = {R.K. Aggarwal and G. Wu},
