--- a/latex/sections/appendix.tex
+++ b/latex/sections/appendix.tex
@@ -188,3 +188,7 @@ As users' mental model of gas improves over time, the volatility of gas has the 
 \section{Conclusion}
 
 In this paper, we provide a survey of active stablecoin projects. Unlike previous research studies performed on this topic, we selectively use the concepts from finance while eliminating the jargons. In addition, rather than focusing on the details of how particular `brands' of stablecoins work, we thoroughly describe the fundamental mechanics and concepts to achieve price stability. Respectively, we show the taxonomy we use to classify stablecoins which represents the techniques to build a stablecoin. Additionally, we evaluate different price stability achieving mechanics based on their fundamental design decisions and trust models. The comparative evaluation framework highlights the advantages and disadvantages of each techniques more precisely. Eventually, we explore the potential stable index-cryptocurrencies (namely Ethereum gas) in the context of stablecoins.
+
+``That would have required a trusted party to determine the value, because I don’t know a way for software to know thereal world value of things. If there was some clever way, or if we wanted to trust someone to actively manage the money supply to peg it to something, the rules could have been programmed for that.
+
+Champagne, Phil. The Book Of Satoshi: The Collected Writings of Bitcoin Creator Satoshi Nakamoto . e53 Publishing, LLC. Kindle Edition.''
