--- a/latex/sections/stablecoin.tex
+++ b/latex/sections/stablecoin.tex
@@ -168,29 +168,23 @@ The second subtype of intervention-based stability mechanism expands and contrac
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
-\section{Discussion.} 
+\section{Discussion and Conclusion.}
 
-\paragraph{Why so many?}
+A more detailed version of this article is available as a whitepaper~\cite{CDM19}. It includes more detail about each coin, some empirical studies of how stable these coins are (see Figure~\ref{} for a preview), and an evaluation of whether of Ethereum's mechanism for paying for computation (gas) is stable or not (the answer: it does not seem to be, for now).
 
-%A variety of firms and projects providing stablecoins in this category exist. Why so many? The differentiation between coins is along a few parameters: (1) the type of asset that can be redeemed for the coin: USD, EUR, gold, \etc; (2) the underlying blockchain (\eg Bitcoin, Ethereum, \etc) and the low-level technical design (updatable contracts, governance, \etc) ~\cite{geminido29:online}; and (3) the degree of regulatory compliance: paving forward in a highly regulated environment to bootstrap trust, or seeking under-regulated environments to move to market quickly and avoid government surveillance for participants.
+In short, stablecoins either bring a low volatility coin onto the blockchain or they play one of two tricks. The first trick is to expand and contract the amount of currency to bring a stable value. The second trick is to turn two high volatility coins (\eg of the underlying cryptocurrency) into one stablecoin and one extremely volatile coin. This last trick is similar to other financial assets which do not reduce overall risk, but instead push it from one tranche of the asset to another.
 
-\paragraph{Regulation.}
+Why are there so many projects? The differentiation between coins is along a few parameters: (1) the type of asset that can be redeemed for the coin: USD, EUR, gold, \etc; (2) the underlying blockchain (\eg Bitcoin, Ethereum, \etc) and the low-level technical design (updatable contracts, governance, \etc); and (3) the country it operates from which determines the degree of regulatory compliance that's required. 
+
+%: paving forward in a highly regulated environment to bootstrap trust, or seeking under-regulated environments to move to market quickly and avoid government surveillance for participants.
+
+What's next? Regulation and CBDC.
+
 %If the firm operates in a jurisdiction with modern securities laws, the issuance of the stablecoins is likely subject to regulatory approval. Further, the redemption of the coins will serve as a main point of regulation, requiring financial reporting to prevent the kind of crime that was prevalent on pre-blockchain coins like Liberty Reserve and e-gold. A number of existing coins with operations in the United States have been reported as disallowing redemption for some holders.
 
-\paragraph{Ethereum's Gas.}
+% Curse of cash
 
-\paragraph{Oracles Everywhere.} 
 
-\paragraph{Centrally Banked Digital Currencies.} Curse of cash
-
-\paragraph{Stability.}
-
-\section{Conclusion.}
-
-A more detailed version of this article is available as a whitepaper~\cite{CDM19}. It includes detailed descriptions of each coin and a consideration of Ethereum Gas as a stablecoin. 
-
-Assume a bockchian only has a high volatity coin. Move onto blockchin. Or do the trick. 
-Consider an ideal stability mechanism: one could deposit a highly volatile coin and receive a low volatility coin. Such a mechanism might be impossible. Stablecoins of this category attempt a trick: they do turn high volatility coins into low volatility coins, however they also produce extreme volatility `coins.' In other words, two types of coins are output and the volatility is pushed from the one type of coin onto the other. This is not unlike some financial assets which do not reduce overall risk, but simply push it from one tranche of the asset to another.
 
 \begin{acks}
 
