done except figure

--- a/latex/sections/stablecoin.tex
+++ b/latex/sections/stablecoin.tex
@@ -164,7 +164,7 @@ When the coinbase is increased or decreased dynamically (sometimes called an ela
 \subsection{Asset Transfer}
 \label{sec:basecoin}
 
-The second subtype of intervention-based stability mechanism expands and contracts the supply of currency to influence its value, however it uses a less direct contraction method. Recall mechanism in Table~\ref{tab:mech}. If many bids in excess of \$1.02 USD remain unexecuted, the logic follows the previous section: the currency is handed out in hopes that more USD will be bought. The justification for offers below \$0.98 is premised on individuals buying places in line, and if this premise is true, the resulting contraction of the currency follows the same logic as the previous section. The purchase of a spot in line is highly speculative --- the currency might not return to stability and the spot might never be reached. As the line gets longer, the price of a place in line will fall, and the speculative market will thin out to traders wanting a higher and higher risk/reward ratio. These trends do not guarantee, or even point toward, a recovery in price. 
+The second subtype of intervention-based stability mechanism expands and contracts the supply of currency to influence its value, however it uses a less direct contraction method. Recall the mechanism in Table~\ref{tab:mech}. If many bids in excess of \$1.02 USD remain unexecuted, the logic follows the previous section: the currency is handed out in hopes that more USD will be bought. The justification for offers below \$0.98 is premised on individuals buying places in line, and if this premise is true, the resulting contraction of the currency follows the same logic as the previous section. The purchase of a spot in line is highly speculative --- the currency might not return to stability and the spot might never be reached. As the line gets longer, the price of a place in line will fall, and the speculative market will thin out to traders wanting a higher and higher risk/reward ratio. These trends do not guarantee, or even point toward, a recovery in price. 
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
@@ -176,15 +176,7 @@ In short, stablecoins either bring a low volatility coin onto the blockchain or 
 
 Why are there so many projects? The differentiation between coins is along a few parameters: (1) the type of asset that can be redeemed for the coin: USD, EUR, gold, \etc; (2) the underlying blockchain (\eg Bitcoin, Ethereum, \etc) and the low-level technical design (updatable contracts, governance, \etc); and (3) the country it operates from which determines the degree of regulatory compliance that's required. 
 
-%: paving forward in a highly regulated environment to bootstrap trust, or seeking under-regulated environments to move to market quickly and avoid government surveillance for participants.
-
-What's next? Regulation and CBDC.
-
-%If the firm operates in a jurisdiction with modern securities laws, the issuance of the stablecoins is likely subject to regulatory approval. Further, the redemption of the coins will serve as a main point of regulation, requiring financial reporting to prevent the kind of crime that was prevalent on pre-blockchain coins like Liberty Reserve and e-gold. A number of existing coins with operations in the United States have been reported as disallowing redemption for some holders.
-
-% Curse of cash
-
-
+What's next? Self-sovereign stablecoins are interesting and probably here to stay, however they face numerous regulatory hurdles from banking, financial tracking, and (likely) securities laws. For stablecoins backed by a governmental currency, where trusting the underlying currency is acceptable to the users, the ultimate expression would be a centrally banked digital currency (CBDC). Since paper currency has been in steady decline (and disproportionately for legitimate transactions~\cite{rogoff2017curse}), a CBDC could reintroduce cash with technological advantages and efficient settlement while minimizing user fees.
 
 \begin{acks}
 
